src/assets/scss/style.scss
@import "theme-variables";
@import "defaults";
@import "lib/css-grid-utility";

.primary-container main {
	min-height: calc(100vh - 60px - 81px);
}

.hero {
	background: var(--hero-backgroud-color);
}

.social-links {
	margin-right: 15px;
	a {
		margin-left: 15px;
		color: rgba(0,0,0,0.7);
		&:hover {
			color: rgb(0,0,0);
		}
	}
	font-size: 24px;
	@media (max-width: $breakpoint-lg) {
		display: none;
	}
}

.site-header {
	display: flex;
	justify-content: flex-start;
	@media (max-width: $breakpoint-lg) {
		justify-content: space-between;
	}
  align-items: center;
  position: relative;
	padding: 20px 20px;
	max-width: var(--max-width); 
	margin: 0 auto;
	.social-links {
		margin-right: 0;
	}
}

.site-navigation {
	flex-grow: 1;
  ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }
  ul li {
    display: inline-block;
    margin-left: 30px;
  }
  a {
    color: rgba(0,0,0,0.6);
    text-decoration: none;
    &:hover {
      color: rgba(0,0,0,0.8);
    }
  }
  a[aria-current="page"] {
    color: rgba(0,0,0,1)
  }
  .menu-trigger {
    display: none;
    font-size: 24px;
    background: none;
    border: none;
    color: #000000;
    padding: 0;
    cursor: pointer;
  }
  @media (max-width: $breakpoint-lg) {
		flex-grow: 0;
    .menu-trigger,
    .icon-menu-line {
      display: flex;
    }

    .icon-menu-close {
      display: none;
    }
    .menu-trigger.is-active {
      .icon-menu-line {
        display: none;
      }
      .icon-menu-close {
        display: flex;
      }
    }
    .menu-trigger.is-active + ul {
      display: block;
    }
    ul {
      display: none;
      position: absolute;
      right: 0;
      top: 100%;
      z-index: 1;
      background: white;
      width: 100%;
			max-width: 320px;    
			border-radius: 0 0 0 12px;
			border: 1px solid rgba(0,0,0,0.12);
			box-shadow: 0 30px 60px rgba(0,0,0,0.1);
      overflow: hidden;
    }
    ul li {
      display: block;
      margin-left: 0;
    }
    a {
      display: block;
      padding: 20px;
    }
    a:hover {
      background-color: white;
    }
  }
}
.container {
	margin: 0 auto;
	max-width: var(--max-width);
	padding: 0 20px;
}
.site-logo {
  font-weight: bold;
	font-size: 20px;
	margin-right: 30px;
  a {
    color: #000;
		text-decoration: none;
		&:hover {
			color: #000;
		}
	}
}
.home-banner {
	padding: 50px 0 50px;
	align-items: center;
	.greetings {
		font-size: 42px;
		margin-bottom: 5px;
		display: flex;
		justify-content: flex-start;
		flex-wrap: wrap;
		.emoji {
			margin-left: 0.5rem;
			margin-right: 0.5rem;
			width: 3rem;
		}
		.introduction {
			flex-wrap: wrap;
		}
	}
	.subheading {
		margin: 15px 0 15px;
		font-size: 32px;
	}
	.description {
		font-size: 20px;
		line-height: 1.4;
		margin-bottom: 30px;
	}
	@media (max-width: $breakpoint-md) {
		padding-top: 30px;
		> div:nth-child(1) {
			padding-bottom: 30px;
		}
	}
}
.home-posts {
	.grids {
		padding-bottom: 30px;
	}
	padding-bottom: 100px;
}
.post-card {
	display: flex;
	padding: 18px;
	height: 100%;
	border: 1px solid rgba(0,0,0,0.08);
	background-color:#fff;
	box-shadow: 0 5px 10px rgba(0,0,0,0.05);
	border-radius: 12px;
	transition: box-shadow .3s linear;
	.featured-image-div {
		min-width: 250px;
		width: 100%;
		@media (min-width: $breakpoint-md) {
			.gatsby-image-wrapper {
				top: 50%;
				transform: translateY(-50%);
			}
		}
		img {
			margin: 0;
			border-radius: 12px;
		}
	}
	.title {
		margin: 0 0 3px;
		font-size: 1.5rem;
		font-weight: 600;
		color: var(--post-title-color);
	}
	&:hover {
		border: 1px solid rgba(0,0,0,0.12);
		box-shadow: 0 30px 60px rgba(0,0,0,0.1);
	}
	.meta {
		margin: 0;
		font-size: .875rem;
		font-weight: 500;
		color: rgba(0,0,0,0.5);
	}
	.description {
		margin: 0;
		margin-top: 10px;
		font-size: 1rem;
		color: rgba(0,0,0,0.8);
	}
	.post-content {
		padding-right: 18px;
	}
	@media (max-width: $breakpoint-md) {
		flex-direction: column;
		padding: 0;
		.post-content {
			padding: 16px;
			margin-top: 0;
		}
		.featured-image-div {
			img {
				border-radius: 12px 12px 0 0;
			}
		}
	}
}
.article-header {
  padding: 45px 0;
	margin: 0 auto;
	max-width: var(--blog-post-width);
  h1 {
    font-size: clamp(32px, calc(1rem + 2vw), 42px);
    line-height: 1.3;
		font-weight: 600;
		margin-bottom: 20px;
  }
  time {
    font-size: 14px;
    color: rgba(0,0,0,0.6)
	}
	span {
    font-size: 14px;
    color: rgba(0,0,0,0.6)
  }
}
@media (max-width: $breakpoint-sm) {
  .post-card .featured-image {
    min-height: 300px;
  }
}
article figure {
	margin: 40px 0;
	text-align: center;
	figcaption {
			font-size: var(--font-size-small);
			color: var(--text-color-meta);
			margin-top: 5px;
	}
}
article blockquote {
	margin-left: 0;
	padding: 5px 5px 5px 20px;
	background-color: #f2f2f2;
	border-left: 3px solid rgba(0,0,0,0.1);
}
article iframe {
	border: 2px solid black;
	box-sizing: border-box;
}
article img {
	max-width: 100%;
}
.blog-post-content {
	max-width: var(--blog-post-width);
	margin:0 auto;
	padding: 20px;
	line-height: 1.5;
	font-size: 20px;
}

.blog-post {
	.featured-image {
		min-height: 50vh;
	}
}
// Buttons 
.button {
	--padding: 20px;
	--margin: 20px;
	display: inline-flex;
	align-items: center;
	padding: var(--padding) calc(var(--padding) * 2);
	background-color: var( --button-color);
	color: var(--button-text-color);
	border-radius: 12px;
	text-decoration: none;
	appearance: none;
	border: none;
	font-size: inherit;
	line-height: 1;
	transition: background .3s linear;
	&:hover {
		background-color: var(--button-hover-color);
		color: var(--button-text-color);
	}
	& + .button {
		margin-left: 20px;
	}
	.icon {
		display: inline-flex;
		&.-right {
			margin-left: var(--margin);
		}
		&.-left {
			margin-right: var(--margin);
		}
	}
}

// Page
.page,
.blog-page,
.not-found-page {
	padding: 50px 20px;
	.wrapper {
		max-width: 768px;
		margin: 0 auto;
	}
}

.blog-post-page {
	width: 100%;
	max-width: none;
	padding-left: 0;
	padding-right: 0;
}

.site-footer {
	display: flex;
	align-items: center;
  background: rgb(240,240,240);
	text-align: center;
	font-size: 14px;
	padding: 20px 0;
	p {
		margin: 0;
		color: #777
	}
	a {
		font-weight: normal;
	}
}

.pagination {
	text-align: center;
	padding: 50px 0;
	ul {
		list-style: none;
		margin: 0;
		padding: 0;
	}
	ul li {
		display: inline-block;
		margin: 0 5px;
	}
	a {
		display: inline-block;
		padding: 10px 20px;
		font-weight: bold;
		line-height: 1;
		&.is-active {
			color: #000000;
			pointer-events: none;
		}
	}
	&.-post {
		text-align: inherit;
		padding: 20px;
		border-top: 1px solid rgba(0,0,0,0.1);
		margin: 50px 0 0;
		ul {
			display: flex;
			justify-content: space-between;
		}
		li:nth-child(1) {
			text-align: left;
		}
		li:nth-child(2) {
			text-align: right;
		}
		p {
			font-size: 14px;
			margin: 0 0 5px;
			color: rgba(0,0,0,0.5);
		}
		a {
			font-weight: normal;
			font-size: 16px;
			padding: 0;
		}
		.page-title {
			line-height: 1.3;
		}
	}
	@media (max-width: $breakpoint-md) {
		padding: 50px 0
		ul {
			display: flex;
			justify-content: space-between;
		}
		&.-post ul {
			display: grid;
			justify-content: normal;
			a {
				padding: 20px;
				border: 1px solid rgba(0,0,0,0.1);
				display: block;
				margin-bottom: 10px;
				background: #fafafa;
			}
		}
		.num {
			display: none;
		}
	}
}

.gatsby-highlight-code-line {
  background-color: #feb;
  display: block;
  margin-right: -1em;
  margin-left: -1em;
  padding-right: 1em;
  padding-left: 0.75em;
  border-left: 0.25em solid var(--primary-color);
}

@import "utility";

// Libraries
@import "lib/prism-default"

